@@ -11,42 +11,41 @@ from __future__ import division, print_function, absolute_import
 import stat
 import os
 import time
-from . import database as dbcm
 
 from .common import ROOT_INODE, CTRL_INODE
 
 __all__ = [ "setup_tables", 'init_tables', 'create_indices' ]
 
-def init_tables():
+def init_tables(conn):
     # Insert root directory
     timestamp = time.time() - time.timezone
-    dbcm.execute("INSERT INTO inodes (id,mode,uid,gid,mtime,atime,ctime,refcount) "
+    conn.execute("INSERT INTO inodes (id,mode,uid,gid,mtime,atime,ctime,refcount) "
                    "VALUES (?,?,?,?,?,?,?,?)",
                    (ROOT_INODE, stat.S_IFDIR | stat.S_IRUSR | stat.S_IWUSR | stat.S_IXUSR
                    | stat.S_IRGRP | stat.S_IXGRP | stat.S_IROTH | stat.S_IXOTH,
                     os.getuid(), os.getgid(), timestamp, timestamp, timestamp, 1))
 
     # Insert control inode, the actual values don't matter that much 
-    dbcm.execute("INSERT INTO inodes (id,mode,uid,gid,mtime,atime,ctime,refcount) "
+    conn.execute("INSERT INTO inodes (id,mode,uid,gid,mtime,atime,ctime,refcount) "
                  "VALUES (?,?,?,?,?,?,?,?)",
                  (CTRL_INODE, stat.S_IFIFO | stat.S_IRUSR | stat.S_IWUSR,
                   0, 0, timestamp, timestamp, timestamp, 42))
 
     # Insert lost+found directory
-    inode = dbcm.rowid("INSERT INTO inodes (mode,uid,gid,mtime,atime,ctime,refcount) "
+    inode = conn.rowid("INSERT INTO inodes (mode,uid,gid,mtime,atime,ctime,refcount) "
                        "VALUES (?,?,?,?,?,?,?)",
                        (stat.S_IFDIR | stat.S_IRUSR | stat.S_IWUSR | stat.S_IXUSR,
                         os.getuid(), os.getgid(), timestamp, timestamp, timestamp, 1))
-    dbcm.execute("INSERT INTO contents (name, inode, parent_inode) VALUES(?,?,?)",
+    conn.execute("INSERT INTO contents (name, inode, parent_inode) VALUES(?,?,?)",
                  (b"lost+found", inode, ROOT_INODE))
 
-def setup_tables():
+def setup_tables(conn):
     # Table with filesystem metadata
     # The number of links `refcount` to an inode can in theory
     # be determined from the `contents` table. However, managing
     # this separately should be significantly faster (the information
     # is required for every getattr!)
-    dbcm.execute("""
+    conn.execute("""
     CREATE TABLE inodes (
         -- id has to specified *exactly* as follows to become
         -- an alias for the rowid.
@@ -67,7 +66,7 @@ def setup_tables():
     # Table of filesystem objects
     # id is used by readdir() to restart at the correct
     # position
-    dbcm.execute("""
+    conn.execute("""
     CREATE TABLE contents (
         rowid     INTEGER PRIMARY KEY AUTOINCREMENT,
         name      BLOB(256) NOT NULL,
@@ -78,7 +77,7 @@ def setup_tables():
     )""")
 
     # Extended attributes
-    dbcm.execute("""
+    conn.execute("""
     CREATE TABLE ext_attributes (
         inode     INTEGER NOT NULL REFERENCES inodes(id),
         name      BLOB NOT NULL,
@@ -88,7 +87,7 @@ def setup_tables():
     )""")
 
     # Refcount is included for performance reasons
-    dbcm.execute("""
+    conn.execute("""
     CREATE TABLE objects (
         id        INTEGER PRIMARY KEY AUTOINCREMENT,
         refcount  INT NOT NULL,
@@ -98,7 +97,7 @@ def setup_tables():
 
 
     # Maps blocks to objects
-    dbcm.execute("""
+    conn.execute("""
     CREATE TABLE blocks (
         inode     INTEGER NOT NULL REFERENCES inodes(id),
         blockno   INT NOT NULL,
@@ -108,11 +107,11 @@ def setup_tables():
     )""")
     
 
-def create_indices():
-    dbcm.execute('CREATE INDEX ix_contents_parent_inode ON contents(parent_inode)')
-    dbcm.execute('CREATE INDEX ix_contents_inode ON contents(inode)')
-    dbcm.execute('CREATE INDEX ix_ext_attributes_inode ON ext_attributes(inode)')
-    dbcm.execute('CREATE INDEX ix_objects_hash ON objects(hash)')
-    dbcm.execute('CREATE INDEX ix_blocks_obj_id ON blocks(obj_id)')
-    dbcm.execute('CREATE INDEX ix_blocks_inode ON blocks(inode)')
+def create_indices(conn):
+    conn.execute('CREATE INDEX IF NOT EXISTS ix_contents_parent_inode ON contents(parent_inode)')
+    conn.execute('CREATE INDEX IF NOT EXISTS ix_contents_inode ON contents(inode)')
+    conn.execute('CREATE INDEX IF NOT EXISTS ix_ext_attributes_inode ON ext_attributes(inode)')
+    conn.execute('CREATE INDEX IF NOT EXISTS ix_objects_hash ON objects(hash)')
+    conn.execute('CREATE INDEX IF NOT EXISTS ix_blocks_obj_id ON blocks(obj_id)')
+    conn.execute('CREATE INDEX IF NOT EXISTS ix_blocks_inode ON blocks(inode)')
 
