@@ -34,8 +34,8 @@ class cache_tests(TestCase):
         
         self.dbfile = tempfile.NamedTemporaryFile()
         dbcm.init(self.dbfile.name)
-        mkfs.setup_tables()
-        mkfs.init_tables()
+        mkfs.setup_tables(dbcm)
+        mkfs.init_tables(dbcm)
 
         # Create an inode we can work with
         self.inode = 42
