@@ -47,8 +47,8 @@ class fs_api_tests(TestCase):
 
         self.dbfile = tempfile.NamedTemporaryFile()
         dbcm.init(self.dbfile.name)
-        mkfs.setup_tables()
-        mkfs.init_tables()
+        mkfs.setup_tables(dbcm)
+        mkfs.init_tables(dbcm)
 
         self.lock = threading.Lock()
         self.server = fs.Operations(self.bucket, self.cachedir,
